<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_1">

        <TextView
            android:id="@+id/lbRepository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/repository"
            android:textColor="@color/green_10"
            android:textSize="12sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/green_10"
            android:textSize="30sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/clQtd"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/lbRepository"
            tools:text="@string/repository" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:contentDescription="@string/image_profile"
            android:padding="2dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvRepository"
            card_view:layout_constraintVertical_bias="0"
            tools:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/lbAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/author"
            android:textColor="@color/white"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/ivProfile"
            card_view:layout_constraintTop_toTopOf="@+id/ivProfile" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/clQtd"
            card_view:layout_constraintStart_toEndOf="@+id/ivProfile"
            card_view:layout_constraintTop_toBottomOf="@+id/lbAuthor"
            tools:text="@string/author" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clQtd"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/green_3"
            android:padding="5dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/image_star"
                android:src="@drawable/ic_star"
                card_view:layout_constraintBottom_toTopOf="@+id/vSeparator"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:tint="@color/white" />

            <TextView
                android:id="@+id/tvQtdStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/ivStar"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/ivStar"
                card_view:layout_constraintTop_toTopOf="@+id/ivStar"
                tools:text="00000" />

            <View
                android:id="@+id/vSeparator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:tint="@color/white" />

            <ImageView
                android:id="@+id/ivFork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_fork"
                android:contentDescription="@string/image_fork"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/vSeparator"
                card_view:tint="@color/white" />

            <TextView
                android:id="@+id/tvQtdFork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/ivFork"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/ivFork"
                card_view:layout_constraintTop_toTopOf="@+id/ivFork"
                tools:text="00000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
